pffff, simple fix for button alignment on ipad

--- a/app/client/stylesheets/components/pu-filterbar.sass
+++ b/app/client/stylesheets/components/pu-filterbar.sass
@@ -4,7 +4,7 @@
     > .pu-sub-label,
     > .pu-sub-input
         float: left
-        margin-left: 20px
+        margin-left: 10px
         position: relative
 
         &:first-child
@@ -52,3 +52,6 @@
     @media screen and (min-width: 1032px)
         > .pu-sub-label
             font-size: 18px
+        > .pu-sub-label,
+        > .pu-sub-input
+            margin-left: 20px
